--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ video {
 .show-controls {
   width: 100%;
   height: 30%;
-  background: dodgerblue;
   z-index: 2;
   position: absolute;
   bottom: 0;
@@ -61,10 +60,15 @@ video {
   z-index: 5;
   display: flex;
   justify-content: space-between;
-
+  opacity: 0;
+  transition: all 0.5s ease-out 2s;
 }
 
-
+/* Translation: when show-controls is being hovered over, we will modify the controls-container: */
+.show-controls:hover .controls-container {
+  opacity: 1;
+  transition: all 0.2s ease-out; /* We want it to appear quickly, but not to disappear as quickly. Common UI. */
+}
 
 .control-group {
   width: 100%;
