--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: dodgerblue;
+  --primary-color: rgb(74, 190, 115);
   --font-color: white;
 }
 
@@ -88,17 +88,23 @@ video {
 
 /* Progress Bar */
 .progress-range {
-
+  height: 8px;
+  /* 100% of parent container minus 15px on each side (30px total): */
+  width: calc(100% - 30px);
+  background: rgba(202, 202, 202, 0.5);
   margin: auto;
   border-radius: 10px;
   position: absolute;
   left: 15px;
   top: 15px;
   cursor: pointer;
-
+  transition: height 0.1s ease-in-out;
 }
 
-
+/* Progress indicator gets slightly bigger on hover to suggest it's something that can be interacted with: */
+.progress-range:hover {
+  height: 10px;
+}
 
 .progress-bar {
   background: var(--primary-color);
