--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
 }
 
 /* TODO: Video selector/rotation; rotate through on word selection (peaceful, mindful, calm, etc). Make UI clear: should be obvious that a selection can be made. Change tab info, too. */
@@ -37,9 +39,6 @@ body {
 .player {
   max-width: 80vw; /* 80% of window */
   min-width: 800px;
-  border: 5px solid black;
-  border-radius: 10px;
-  background: black;
   position: relative;
   cursor: pointer;
 }
@@ -61,8 +60,9 @@ video {
 }
 
 .controls-container {
+  border-radius: 0px 0px 5px 5px;
   position: absolute;
-  bottom: -5px;
+  bottom: 3.5px;
   width: 100%;
   height: 95px;
   margin-top: -95px;
@@ -303,6 +303,10 @@ select > option {
   video {
     height: 95vh;
     object-fit: cover;
+  }
+
+  .controls-container {
+    bottom: -0.3px;
   }
 
   .video-fullscreen {
